--- a/GoIT/markup/home/lesson1/task1.html
+++ b/GoIT/markup/home/lesson1/task1.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Иванчихин Константин | Front-End Online #2 Course</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body>
+	<div class="content">
+	<div class="name">
+		<h1>Иванчихин Константин Владимирович</h1>
+		<figure class="myphoto">
+		<img src="img/myphoto.jpg" title="Моя фотография" alt="Константин">
+	</div>
+	<div class="aboutme">
+		<p>Интересы:</p>
+			<ul>
+				<li>Дизайн</li>
+				<li>Типографика</li>
+				<li>Архитектура</li>
+				<li>Путешествия</li>
+			</ul>
+	</div>
+	<div class="contactinfo">
+		<ul>Контакты:
+				<li>Мобильный телефон<br>+38 067 842 000 4</li>
+				<li><a href="http://facebook.com/kotas.pro">Моя страница на Facebook</a></li>
+				<li><a href="https://github.com/KotasUkraine">Я на GitHub</a></li>
+		</ul>
+	</div>
+	<div class="additional">
+			<p>Дополнительные сведения</p>
+			<p>Строка дополнительных сведений</p>
+			<p>Еще одна строка дополнительных требований</p>
+			<p>И еще одна строка дополнительных требований</p>
+	</div>
 
+
+
+</body>
+</html>
