--- a/GoIT/markup/home/lesson3/index.html
+++ b/GoIT/markup/home/lesson3/index.html
@@ -1,19 +1,71 @@
 <!DOCTYPE html>
-
 <html>
+<head>
+  <title>Fitness</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700&subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'> -->
 
-  <head>
-    <meta charset="utf-8">
-    <title>Homewok Lesson 3 | KotasUkraine</title>
-    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
-  </head>
+</head>
+<body>
+  <div class="wrapper">
+    <header>
+      <div class="logo">
+        <img src="img/logo_fitness.png">
+      </div>
+      <div class="nav">
+        <ul class="top_menu">
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Товары</a></li>
+          <li><a href="#">О нас</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+    </header>
 
-  <body>
+    <div class="container">
+      <div class="aside">
+        <ul class="side_menu">
+          <li><a href="#">Ноутбуки</a></li>
+          <li><a href="#">Планшеты</a></li>
+          <li><a href="#">Телефоны</a></li>
+          <li><a href="#">Телевизоры</a></li>
+          <li><a href="#">Бытовая техника</a></li>
+          <li><a href="#">Автотовары</a></li>
+        </ul>
+      </div>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+      <div class="main_image">
+          <img src="img/img_large_item001.jpg">
+      </div>
+
+      <article>
+        <p>
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </article>
+    </div>
+
+    <footer>
+      <div class="bottom_menu">
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Товары</a></li>
+          <li><a href="#">О нас</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+
+      <div class="copyright">
+        <p>
+          2014 &copy; All right reserved
+        </p>
+      </div>
+    </footer>
+  </div>
 
 
-  </body>
+</body>
 </html>
