--- a/GoIT/markup/home/lesson1/task1.html
+++ b/GoIT/markup/home/lesson1/task1.html
@@ -12,7 +12,7 @@
 		<figure class="myphoto">
 		<img src="img/myphoto.jpg" title="Моя фотография" alt="Константин">
 	</div>
-	<div class="aboutme">
+	<div class="about_me">
 		<p>Интересы:</p>
 			<ul>
 				<li>Дизайн</li>
@@ -21,8 +21,9 @@
 				<li>Путешествия</li>
 			</ul>
 	</div>
-	<div class="contactinfo">
-		<ul>Контакты:
+	<div class="contact_info">
+		<p>Контакты:</p>
+		<ul type="none">
 				<li>Мобильный телефон<br>+38 067 842 000 4</li>
 				<li><a href="http://facebook.com/kotas.pro">Моя страница на Facebook</a></li>
 				<li><a href="https://github.com/KotasUkraine">Я на GitHub</a></li>
