--- a/GoIT/markup/home/lesson1/task1.html
+++ b/GoIT/markup/home/lesson1/task1.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div class="content">
+	<div class="main-content">
 	<div class="name">
 		<h1>Иванчихин Константин Владимирович</h1>
-		<figure class="myphoto">
+		<figure class="my-photo">
 		<img src="img/myphoto.jpg" title="Моя фотография" alt="Константин">
 	</div>
-	<div class="about_me">
+	<div class="about-me">
 		<p>Интересы:</p>
 			<ul>
 				<li>Дизайн</li>
@@ -21,7 +21,7 @@
 				<li>Путешествия</li>
 			</ul>
 	</div>
-	<div class="contact_info">
+	<div class="contact-info">
 		<p>Контакты:</p>
 		<ul type="none">
 				<li>Мобильный телефон<br>+38 067 842 000 4</li>
@@ -29,7 +29,7 @@
 				<li><a href="https://github.com/KotasUkraine">Я на GitHub</a></li>
 		</ul>
 	</div>
-	<div class="additional">
+	<div class="additional-info">
 			<p>Дополнительные сведения</p>
 			<p>Строка дополнительных сведений</p>
 			<p>Еще одна строка дополнительных требований</p>
