--- a/GoIT/markup/home/lesson1/task1.html
+++ b/GoIT/markup/home/lesson1/task1.html
@@ -24,7 +24,8 @@
 	<div class="contact-info">
 		<p>Контакты:</p>
 		<ul type="none">
-				<li>Мобильный телефон<br>+38 067 842 000 4</li>
+				<li>Мобильный телефон</li>
+				<li>+38 067 842 000 4</li>
 				<li><a href="http://facebook.com/kotas.pro">Моя страница на Facebook</a></li>
 				<li><a href="https://github.com/KotasUkraine">Я на GitHub</a></li>
 		</ul>
