--- a/GoIT/markup/home/lesson3/index.html
+++ b/GoIT/markup/home/lesson3/index.html
@@ -15,14 +15,14 @@
       <div class="logo">
         <img src="img/logo_fitness.png">
       </div>
-      <div class="nav">
+      <nav class="menu">
         <ul class="top_menu">
           <li><a href="#">Главная</a></li>
           <li><a href="#">Товары</a></li>
           <li><a href="#">О нас</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-      </div>
+      </nav>
     </header>
 
     <div class="container">
