--- a/GoIT/markup/home/lesson3bonus/index.html
+++ b/GoIT/markup/home/lesson3bonus/index.html
@@ -2,9 +2,75 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Lesson 3 bonus</title>
   </head>
   <body>
+    <div class="wrapper">
+      <header>
+        <div class="logotype">
+          <img src="img/image_logo.png"
+        </div>
+
+        <div class="contact_info">
+          <p>Contact Us:</p> <!-- Tahoma regular 10px -->
+          <p>+12 34 567 8910</p> <!-- Tahoma regular 8px -->
+          <p>info@asia-holidays.com</p>  <!-- Tahoma regular 8px -->
+        </div>
+      </header
+
+      <section class="Content">
+        <div class="row">
+          <figure class="country_image">
+            <a href="#">
+              <img src="img/india.jpg">
+            </a>
+            <figcaption>India</figcaption>
+          </figure>
+          <figure class="country_image">
+            <a href="#">
+              <img src="img/nepal.jpg">
+            </a>
+            <figcaption>Nepal</figcaption>
+          </figure>
+          <figure class="country_image">
+            <a href="#">
+              <img src="img/tibet.jpg">
+            </a>
+            <figcaption>Tibet</figcaption>
+          </figure>
+        </div>
+        <div class="row">
+          <figure class="country_image">
+            <a href="#">
+              <img src="img/bhutan.jpg">
+            </a>
+            <figcaption>Bhutan</figcaption>
+          </figure>
+          <figure class="country_image">
+            <a href="#">
+              <img src="img/srilanka.jpg">
+            </a>
+            <figcaption>Sri-Lanka</figcaption>
+          </figure>
+          <figure class="country_image">
+            <a href="#">
+              <img src="img/maldives.jpg">
+            </a>
+            <figcaption>Maldives</figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <footer>
+        <div class="Copyright">
+          <p>Copyright (c) asia-holidays.com. 2010</p>
+        </div>
+      </footer>
+
+    </div> <!-- Wrapper -->
+
 
   </body>
 </html>
