--- a/GoIT/markup/home/lesson3/index.html
+++ b/GoIT/markup/home/lesson3/index.html
@@ -13,7 +13,7 @@
   <div class="wrapper">
     <header>
       <div class="logo">
-        <img src="img/logo_fitness.png">
+        <a href="#"> <img src="img/logo_fitness.png"> </a>
       </div>
       <nav class="menu">
         <ul class="top_menu">
@@ -65,7 +65,7 @@
       </div>
     </footer>
   </div>
-
+div>
 
 </body>
 </html>
